Bug 453124 - Quality - Rows in additional project information section of project overview aren't vertically aligned

--- a/bundles/org.eclipse.orion.client.ui/web/css/controls.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/controls.css
@@ -1108,6 +1108,11 @@ textarea.parameterInput {
 	padding: 8px;
 }
 
+.discreetInfoCell {
+	color: #666666;	
+	padding: 8px;
+}
+
 .sectionTreeTable {
 	border-spacing: 0;
 	width:100%;
